added DOI for Stehfest 1970 reference

--- a/paper.bib
+++ b/paper.bib
@@ -51,5 +51,6 @@ journal="Communication of the ACM",
 year="1970",
 volume="13",
 number="1",
-pages="47-49"
+pages="47-49",
+doi="10.1145/361953.361969"
 }
