Correction of JOSS paper and bibliography

--- a/paper.bib
+++ b/paper.bib
@@ -54,3 +54,36 @@ number="1",
 pages="47-49",
 doi="10.1145/361953.361969"
 }
+
+@article{alcolea2009,
+  title={Reducing the impact of a desalination plant using stochastic modeling and optimization techniques},
+  author={Alcolea, Andres and Renard, Philippe and Mariethoz, Gregoire and Bertone, Fran{\c{c}}ois},
+  journal={Journal of hydrology},
+  volume={365},
+  number={3},
+  pages={275--288},
+  year={2009},
+  doi="10.1016/j.jhydrol.2008.11.034"
+}
+
+@article{dematteis2003,
+  title={The hydrogeological studies concerning the new international railway connection between Lyon and Turin: forecasting groundwater impact during tunnelling},
+  author={Dematteis, A and Darmendrail, X and Perello, P and Damiano, A and Pastorelli, S and Novel, JP and Delle Piane, L and Baptendier, E and Perrochet, P and Renard, P and others},
+  journal={Materials and Geoenvironment},
+  volume={50},
+  pages={101--104},
+  year={2003},
+  url={http://www.rmz-mg.com/letniki/rmz50/rmz50_0101-0104.pdf}
+}
+
+@article{desroches2016monitoring,
+  title={Monitoring and modelling of pumping-induced self-potentials for transmissivity estimation within a heterogeneous confined aquifer},
+  author={DesRoches, Aaron J and Butler, Karl E},
+  journal={Geophysical Supplements to the Monthly Notices of the Royal Astronomical Society},
+  volume={207},
+  number={3},
+  pages={1722--1738},
+  year={2016},
+  publisher={The Royal Astronomical Society},
+  doi="doi.org/10.1093/gji/ggw354"
+}
