--- a/paper.bib
+++ b/paper.bib
@@ -15,14 +15,12 @@ volume = "107",
 number = "3",
 pages = "88 - 97",
 year = "2009",
-doi = "http://dx.doi.org/10.1016/j.enggeo.2009.05.010",
+doi = "10.1016/j.enggeo.2009.05.010",
 author = "Miguel Mejías and Philippe Renard and Damian Glenz"
 }
 
 @Article{renard2009,
-author="Renard, Philippe
-and Glenz, Damian
-and Mejias, Miguel",
+author={Renard, Philippe and Glenz, Damian and Mejias, Miguel},
 title="Understanding diagnostic plots for well-test interpretation",
 journal="Hydrogeology Journal",
 year="2009",
@@ -45,7 +43,7 @@ year = {2006}
 }
 
 @Article{stefhest1970,
-author="Stehfest, H."
+author="Stehfest, H.",
 title="Algorithm 368: Numerical inversion of Laplace transform",
 journal="Communication of the ACM",
 year="1970",
@@ -85,5 +83,5 @@ doi="10.1145/361953.361969"
   pages={1722--1738},
   year={2016},
   publisher={The Royal Astronomical Society},
-  doi="doi.org/10.1093/gji/ggw354"
+  doi="10.1093/gji/ggw354"
 }
